src/styl/thing.styl
/*
 * Config
 */
border-radius()
  -webkit-border-radius: arguments
  -moz-border-radius: arguments
  border-radius: arguments

$moti-font = $qz-sans
$moti-font-bold = $qz-sans-bold

$moti-black = #000000           // Primary black
$moti-charcoal = #4c4c4c
$moti-grey = #a1a1a1
$moti-silver = #bebebe
$moti-light-grey = #e2e2e2      // Background
$moti-white = #ffffff           // For pop
$moti-light-blue = #bcdef3
$moti-blue = #168dd9
$moti-dark-blue = #006AA4       // Primary blue
$moti-pink = #ac5588            // Accent

$land-fill = $moti-white
$land-stroke = $moti-light-grey
$operational = $moti-dark-blue
$future = $moti-pink
$text = $moti-charcoal

/*
 * Thing styles
 */
body
    background-image: url("../assets/backgroundTile.jpg");
    background-repeat: repeat;

ul#legend
   padding: 15px 0 0 10px
   margin: 0
   list-style-type: none

   li
     display: inline-block
     margin: 0 18px 0 0
     padding: 0
     line-height: 17px

     b
       display: inline-block
       width: 17px
       height: 17px
       margin-right: 6px
       float: left
       border: 1px solid $qz-map-graticule
       border-radius(8px)

     div
       whitespace: nowrap
       fill: $qz-gray-2
       font-size: 14px
       font-family: 'AdelleSans-Regular', Helvetica, Arial, sans-serif
       float: left;

     &.construction b
       background-color: alpha($future, 0.7)

     &.operational b
       background-color: alpha($operational, 0.7)

.item-body h2
  // font-size 1.2em
  // line-height 1.2em
  // font-style bold
  margin 15px 0px 10px

//svg
//  background-color: $qz-map-water

.borders path
  stroke: $land-stroke
  stroke-width: 1px
  fill: $land-fill

.cables
  path
    stroke: $operational
    stroke-width: 2px
    stroke-opacity: 0.7
    fill: none
    opacity: 0.7

    &.future
        stroke: $future

.landings
  circle
    stroke: $land-stroke
    fill: $operational
    stroke-width: 1px
    stroke-opacity: 0.7
    opacity: 0.7

    &.future
        fill: $future

text.year
  fill: $text
  font-family: 'AdelleSans-Regular', Helvetica, Arial, sans-serif
  -webkit-font-smoothing: antialiased
  font-size: 500%
  opacity: 0.75

.controls
  polygon
    fill: $text

  text
    fill: $text
    font-family: 'AdelleSans-Regular', Helvetica, Arial, sans-serif
    -webkit-font-smoothing: antialiased
    font-size: 300%

rect.play
  fill: rgba(200,200,200,0.4)
  stroke-width: 2px
  //stroke: $text

  &:hover
    cursor: pointer

p#footnote
  font-size: 12px
  line-height: 14px
  font-family: 'AdelleSans-Regular', Helvetica, Arial, sans-serif
  color: #888
  margin: 0 0 15px 10px
  padding: 0

/*
 * Media queries
 */
@media screen and (max-width: 600px)
  .item-body h2
    font-size 14px

  .borders path
    stroke-width: 0.5px

  rect.play {
    stroke-width: 1px;
  }

  #footer
    font-size: 60%

